--- a/CarRentSystem/CarRentSystem.csproj
+++ b/CarRentSystem/CarRentSystem.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Nowy folder\" />
+  </ItemGroup>
+
 </Project>
